修改基本配置

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: Vno Jekyll
 subtitle: A blog-orientation theme for Jekyll
 welcome_message: <a href="https://github.com/onevcat/vno-jekyll" target="_blank">Download the theme</a>
-description: Vno Jekyll is a port of my Ghost theme vno.
-creator: <a href="http://onev.cat">@onevcat</a>
+description: 简单的描述
+creator: ScottLaw
 
-url: "http://vno.onevcat.com"
+url: "https://scottlaw.github.io"
 
 permalink: /:year/:month/:title/
 
